--- a/app/src/main/res/layout/activity_ubahevent.xml
+++ b/app/src/main/res/layout/activity_ubahevent.xml
@@ -11,9 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Ubah Event"
         app:layout_constraintStart_toStartOf="@+id/etnamabaru"
-        app:layout_constraintTop_toBottomOf="@+id/textView27" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
 
     <TextView
         android:id="@+id/tvhj"
@@ -21,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Lokasi :"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etnamabaru" />
@@ -31,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Jumlah Tamu :"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ettempatbaru" />
@@ -41,6 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Tanggal / jam :"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ettamubaru" />
@@ -51,9 +55,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="No Telphone :"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView43" />
 
     <TextView
         android:id="@+id/tvstatusu"
@@ -62,6 +67,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Status Baru"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.481"
@@ -87,7 +93,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:fontFamily="@font/poppins_bold"
         android:inputType="textPersonName"
+        android:textSize="14sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/textView41"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,32 +108,38 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:fontFamily="@font/poppins_bold"
         android:inputType="number"
+        android:textSize="14sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/textView42"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/ettempatbaru"
         app:layout_constraintTop_toTopOf="@+id/textView42" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="4dp"
+        android:backgroundTint="#00ADB5"
         android:onClick="dp"
-        android:text="Ubah tanggal"
+        android:scaleType="fitXY"
+        android:src="@drawable/tanggal"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView43" />
+        app:layout_constraintBottom_toBottomOf="@+id/tvjambaru"
+        app:layout_constraintEnd_toStartOf="@+id/button4"
+        app:layout_constraintTop_toTopOf="@+id/tvjambaru" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="#00ADB5"
         android:onClick="tp"
-        android:text="ubah jam"
+        android:scaleType="fitXY"
+        android:src="@drawable/jam"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/button3" />
@@ -134,6 +148,7 @@
         android:id="@+id/tvlokasiu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/tvhj"
         app:layout_constraintStart_toStartOf="@+id/etnamabaru"
@@ -155,6 +170,7 @@
         android:id="@+id/tvtlpu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="@+id/ettamubaru"
         app:layout_constraintTop_toTopOf="@+id/textView31" />
@@ -163,6 +179,7 @@
         android:id="@+id/tvtamuu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="@+id/ettempatbaru"
         app:layout_constraintTop_toTopOf="@+id/tvt" />
@@ -171,6 +188,7 @@
         android:id="@+id/tvtanggalu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="@+id/ettamubaru"
         app:layout_constraintTop_toTopOf="@+id/textView30" />
@@ -179,6 +197,7 @@
         android:id="@+id/tvjamu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/textView39"
         app:layout_constraintTop_toTopOf="@+id/tvtanggalu" />
@@ -187,6 +206,7 @@
         android:id="@+id/textView39"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
         android:text=" / "
         app:layout_constraintStart_toEndOf="@+id/tvtanggalu"
         app:layout_constraintTop_toTopOf="@+id/tvtanggalu" />
@@ -208,6 +228,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Jenis Event Baru  :"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
@@ -218,6 +239,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Lokasi Event Baru :"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="@+id/tvhj"
@@ -228,6 +250,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Jumlah Tamu Baru :"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="@+id/tvt"
@@ -238,6 +261,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Tanggal / jam baru :"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="@+id/textView30"
@@ -247,6 +271,7 @@
         android:id="@+id/tvtglbaru"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
         android:text="TextView"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/textView43"
@@ -257,6 +282,7 @@
         android:id="@+id/textView45"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
         android:text=" / "
         android:visibility="visible"
         app:layout_constraintStart_toEndOf="@+id/tvtglbaru"
@@ -266,6 +292,7 @@
         android:id="@+id/tvjambaru"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
         android:text="TextView"
         android:visibility="visible"
         app:layout_constraintStart_toEndOf="@+id/textView45"
@@ -276,6 +303,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="No Telphone baru"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="@+id/textView31"
@@ -287,7 +315,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:fontFamily="@font/poppins_bold"
         android:inputType="phone"
+        android:textSize="14sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/textView47"
         app:layout_constraintEnd_toEndOf="parent"
@@ -301,7 +331,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="TextView"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -310,6 +340,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Jenis Event  :"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tvnamau" />
@@ -318,11 +349,23 @@
         android:id="@+id/textView27"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Ubah Event"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toEndOf="@+id/imageView8"
+        app:layout_constraintTop_toTopOf="@+id/imageView8" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
